fixed responsive on tablet

--- a/assets/sass/_pages.scss
+++ b/assets/sass/_pages.scss
@@ -201,6 +201,10 @@
                 margin-top: 200px;
                 margin-bottom: 150px;
                 position: relative;
+                @include tablet{
+                    margin-top: 280px;
+                    margin-bottom: 50px;
+                }
             }
         }
         #pro-iteration {
@@ -208,6 +212,9 @@
             min-height: 630px;
             @include mobile {
                 min-height: 188px;
+            }
+            @include tablet{
+                min-height: 380px;
             }
             .img-iterate {
                 margin: 0 auto;
@@ -683,7 +690,7 @@
             @include tablet {
                 width: 75%;
                 margin: 0 auto;
-                text-align: center;
+                text-align: left;
                 margin-bottom: 35px;
             }
         }
